--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,7 +5,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:gravity="bottom"
                 android:background="#C5C5C5"
                 tools:context=".Home">
 
@@ -21,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:menu="@menu/bottom_navigation_menu"
+            android:layout_alignParentBottom="true"
             android:background="#fff"
             android:layout_gravity="bottom"/>
 
