--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -92,12 +92,15 @@
                 android:textColor="#fff"
                 android:text="Now!"/>
     </LinearLayout>
+
     <TextView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="Or Login with"
               android:textColor="#fff"/>
-    <ImageView android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_margin="10dp"
-               android:src="@drawable/gl1"/>
+    <ImageView
+            android:id="@+id/sign_in_button_google"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:src="@drawable/gl1"/>
 </LinearLayout>
